test/Runner/errors/tests/MI/Hook/Hook.runtime.js
mi("Suite", () => {
	seed("Seed", () => {});
	beforeSeed(() => { throw new Error(); });
})
